--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg4"
+    android:background="@drawable/bg6"
     android:orientation="vertical"
     tools:context=".SignUp">
 
@@ -92,28 +92,29 @@
         android:id="@+id/createButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/btn_circle"
-        android:backgroundTint="#6F5642"
-        android:text="create account"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/btn_bg"
         android:fontFamily="@font/roboto"
+        android:text="create account"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:cornerRadius="70dp"/>
+        android:textStyle="bold"
+        app:cornerRadius="70dp" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/btn_circle"
-        android:backgroundTint="#6F5642"
-        android:text="back to login"
+        android:background="@drawable/btn_bg"
+        android:backgroundTint="#6F5643"
         android:fontFamily="@font/roboto"
-        android:textColor="#FFFFFF"
+        android:text="back to login"
+        android:textColor="@color/white"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:cornerRadius="70dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createButton" />
