--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,7 +9,7 @@
     tools:context=".Calendar">
 
     <ImageView
-        android:id="@+id/goBackHome"
+        android:id="@+id/backHome"
         android:layout_width="65dp"
         android:layout_height="65dp"
         app:srcCompat="@drawable/ic_back" />
@@ -139,9 +139,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calendarRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="210dp" />
+        android:layout_height="210dp" /><![CDATA[
         android:layout_height="0dp"
         android:layout_weight="1"/>
+
+
+
+    ]]>
 
     <Button
         android:id="@+id/calendarNewEvent"
@@ -149,11 +153,14 @@
         android:layout_height="34dp"
         android:layout_gravity="center"
         android:background="@null"
+        android:fontFamily="@font/roboto"
         android:onClick="newEventAction"
         android:text="New Event"
-        android:textColor="#0000FF"
+        android:textColor="#6F5643"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:drawableEnd="@drawable/ic_pencil"
+        android:drawablePadding="5dp"/>
 
     <ListView
         android:id="@+id/eventListView"
