--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -132,10 +132,13 @@
         android:id="@+id/taskTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="60dp"
-        android:text="00:00:00"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="45dp"
+        android:fontFamily="@font/oswald"
+        android:padding="10dp"
+        android:text="00 : 00 : 00"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tasktDeadLine" />
 
