--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -10,13 +10,17 @@
         android:id="@+id/deleteTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="16dp"
-        android:text="Delete Task"
-        android:textColor="#D12B2B"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="24dp"
+        android:background="#DDDDDD"
+        android:fontFamily="@font/roboto"
+        android:padding="10dp"
+        android:text="DELETE TASK"
+        android:textColor="#cc6b49"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDeadline" />
 
     <TextView
         android:id="@+id/textView7"
