--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -1,63 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".CalendarEventEditActivity">
 
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        app:srcCompat="@drawable/ic_back" />
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView20"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="Name:"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:fontFamily="@font/oswald"
+        android:text="Add New Event"
+        android:textColor="#6F5643"
+        android:textSize="34sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eventNameET"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="53dp"
         android:layout_gravity="center"
-        android:textSize="20sp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_input"
         android:ems="10"
-        android:inputType="text"/>
+        android:fontFamily="@font/roboto"
+        android:hint="Name of Event"
+        android:inputType="text"
+        android:padding="10dp"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/eventDateTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/custom_input"
+        android:fontFamily="@font/roboto"
         android:text="Date"
-        android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/eventTimeTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/custom_input"
+        android:fontFamily="@font/roboto"
         android:text="Time"
-        android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <Button
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:textColor="#0000FF"
-        android:background="@null"
-        android:textStyle="bold"
-        android:onClick="saveEventAction"
+        android:layout_width="200dp"
+        android:layout_height="55dp"
         android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:layout_marginTop="50dp"
+        android:background="@drawable/btn_bg"
+        android:drawableEnd="@drawable/ic_addbutton"
+        android:drawablePadding="5dp"
+        android:fontFamily="@font/roboto"
+        android:onClick="saveEventAction"
+        android:padding="10dp"
+        android:text="Save"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
