profile + other pages layout update

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,12 +41,14 @@
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="95dp"
         android:layout_marginEnd="28dp"
         android:fontFamily="@font/roboto"
-        android:text="Change "
+        android:padding="10dp"
+        android:text="CHANGE"
         android:textColor="#128AE6"
-        android:textSize="20sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
@@ -54,8 +56,8 @@
         android:id="@+id/textProfilePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="35dp"
         android:fontFamily="@font/roboto"
         android:text="**********"
         android:textColor="#000000"
@@ -96,14 +98,18 @@
 
     <TextView
         android:id="@+id/logoutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_width="300dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="34dp"
-        android:shadowColor="#2A6CA1"
-        android:text="Log out account"
-        android:textColor="#128AE6"
+        android:background="@drawable/btn_bg"
+        android:fontFamily="@font/roboto"
+        android:gravity="center_horizontal"
+        android:padding="15dp"
+        android:text="LOGOUT "
+        android:textColor="@color/white"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deleteAccountButton" />
 
@@ -113,9 +119,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
-        android:text="Delete Account"
-        android:textColor="#D12B2B"
-        android:textSize="20sp"
+        android:background="#DDDDDD"
+        android:padding="10dp"
+        android:shadowColor="#1C1C1C"
+        android:text="DELETE ACCOUNT"
+        android:textColor="#cc6b49"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textProfilePassword" />
 
@@ -137,7 +147,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
-        android:text="Password"
+        android:text="Password:"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
