--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context=".ToDoListTaskDetails">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="144dp"
         android:fontFamily="@font/oswald"
         android:text="My Task "
         android:textColor="#6f5642"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,9 +25,11 @@
         android:id="@+id/taskTitle"
         android:layout_width="167dp"
         android:layout_height="53dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="80dp"
+        android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
+        android:padding="10dp"
         android:text="Title"
         android:textSize="24sp"
         android:textStyle="normal"
@@ -38,11 +39,13 @@
     <TextView
         android:id="@+id/taskDiscription"
         android:layout_width="320dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="44dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="124dp"
+        android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
+        android:padding="10dp"
         android:text="DescriptionDetail"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +57,12 @@
         android:id="@+id/taskStartTIme"
         android:layout_width="320dp"
         android:layout_height="53dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="164dp"
+        android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
+        android:padding="10dp"
         android:text="Start Time"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,9 +74,11 @@
         android:id="@+id/tasktDeadLine"
         android:layout_width="320dp"
         android:layout_height="53dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
+        android:padding="10dp"
         android:text="Deadline"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="144dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="40dp"
         android:backgroundTint="#cc6b49"
         android:fontFamily="@font/roboto"
         android:text="edit"
@@ -99,8 +106,6 @@
         android:id="@+id/taskDetailBackButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
@@ -133,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="135dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/oswald"
         android:padding="10dp"
         android:text="00 : 00 : 00"
@@ -146,11 +151,12 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="35dp"
         android:fontFamily="@font/roboto"
         android:text="Title "
         android:textColor="#6F5643"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/taskTitle"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -158,11 +164,12 @@
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="35dp"
         android:fontFamily="@font/roboto"
         android:text="Description"
         android:textColor="#6F5643"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/taskDiscription"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -170,11 +177,12 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="35dp"
         android:fontFamily="@font/roboto"
         android:text="Start Time"
         android:textColor="#6F5643"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/taskStartTIme"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -182,11 +190,12 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="35dp"
         android:fontFamily="@font/roboto"
         android:text="Deadline"
         android:textColor="#6F5643"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tasktDeadLine"
         app:layout_constraintStart_toStartOf="parent" />
 
