--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -18,12 +18,13 @@
             android:layout_height="85dp"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="50dp"
             android:background="@drawable/btn_bg"
             android:backgroundTint="#e9e0d4"
             android:fontFamily="@font/roboto"
+            android:paddingLeft="20dp"
             android:stateListAnimator="@null"
             android:text="Button"
+            android:textAlignment="viewStart"
             android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
