--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -51,7 +51,7 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/calEventTimeTV"
+        android:id="@+id/calEventTimeET"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginLeft="50dp"
@@ -64,6 +64,7 @@
         android:textSize="20sp" />
 
     <Button
+        android:id="@+id/calAddEventBtn"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_gravity="center"
