--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,9 +17,9 @@
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="44dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="240dp"
         android:fontFamily="@font/oswald"
         android:text="WELCOME"
@@ -31,7 +31,7 @@
         android:id="@+id/editTextUsername"
         android:layout_width="320dp"
         android:layout_height="53dp"
-        android:layout_marginLeft="44dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_person"
@@ -48,7 +48,7 @@
         android:id="@+id/editTextPassword"
         android:layout_width="321dp"
         android:layout_height="53dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_lock"
@@ -65,7 +65,7 @@
         android:id="@+id/loginButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_bg"
         android:fontFamily="@font/roboto"
@@ -81,7 +81,7 @@
         android:id="@+id/newUserButton"
         android:layout_width="320dp"
         android:layout_height="65dp"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/btn_bg"
         android:backgroundTint="#6F5643"
