--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -98,30 +98,27 @@
 
     <TextView
         android:id="@+id/logoutButton"
-        android:layout_width="300dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="34dp"
-        android:background="@drawable/btn_bg"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto"
         android:gravity="center_horizontal"
-        android:padding="15dp"
         android:text="LOGOUT "
-        android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textAlignment="viewStart"
+        android:textColor="#cc6b49"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deleteAccountButton" />
 
     <TextView
         android:id="@+id/deleteAccountButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="34dp"
-        android:background="#DDDDDD"
-        android:padding="10dp"
-        android:shadowColor="#1C1C1C"
+        android:drawableEnd="@drawable/ic_trash"
         android:text="DELETE ACCOUNT"
         android:textColor="#cc6b49"
         android:textSize="16sp"
