--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/taskTitle"
         android:layout_width="167dp"
-        android:layout_height="53dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/custom_input"
@@ -32,7 +32,7 @@
         android:padding="10dp"
         android:text="Title"
         android:textSize="24sp"
-        android:textStyle="normal"
+        android:textStyle="normal|bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -47,7 +47,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="DescriptionDetail"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Start Time"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Deadline"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,7 +114,7 @@
         android:id="@+id/startStopTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="55dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#cc6b49"
         android:text="Start"
@@ -126,7 +126,7 @@
         android:id="@+id/completeTaskButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="91dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="16dp"
         android:text="Complete"
         android:textColor="#cc6b49"
@@ -137,7 +137,7 @@
         android:id="@+id/taskTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="135dp"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/oswald"
         android:padding="10dp"
