--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="24dp"
-        android:background="#DDDDDD"
+        android:layout_marginTop="32dp"
+        android:drawableEnd="@drawable/ic_trash"
+        android:drawablePadding="5dp"
         android:fontFamily="@font/roboto"
-        android:padding="10dp"
         android:text="DELETE TASK"
         android:textColor="#cc6b49"
         android:textSize="16sp"
@@ -79,6 +79,7 @@
         android:hint="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskDescription" />
@@ -98,6 +99,7 @@
         android:hint="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskStartTime" />
@@ -115,6 +117,8 @@
         android:hint="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +127,7 @@
     <EditText
         android:id="@+id/editCurrentTaskDescription"
         android:layout_width="320dp"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="44dp"
@@ -133,6 +137,7 @@
         android:hint="Description"
         android:inputType="textPersonName"
         android:padding="10dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskTitle" />
