Updated Contact Us.

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,13 +11,13 @@
         android:layout_width="284dp"
         android:layout_height="117dp"
         android:layout_marginStart="87dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="89dp"
         android:translationZ="90dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView25"
         app:srcCompat="@drawable/dont_slcak" />
 
     <TextView
@@ -53,15 +53,12 @@
         android:layout_width="367dp"
         android:layout_height="393dp"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="256dp"
         android:background="@drawable/textview_border"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backHome3"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
     <TextView
         android:id="@+id/textView18"
@@ -79,44 +76,30 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="199dp"
-        android:layout_height="124dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="28dp"
-        android:background="@drawable/textview_border"
-        android:backgroundTint="#fafafa"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
-        app:layout_constraintStart_toEndOf="@+id/backHome3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView17"
         android:layout_width="321dp"
         android:layout_height="78dp"
         android:layout_marginStart="84dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="84dp"
         android:text="Hi! We are a group of students creating this application for our assignments."
         android:textAlignment="center"
         android:textColor="#6f5642"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:layout_marginTop="191dp"
+        android:layout_marginTop="147dp"
         android:layout_marginEnd="144dp"
-        android:layout_marginBottom="46dp"
         android:text="Terms &amp; Conditions"
         android:textColor="#706A6A"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
