--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -6,75 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".Contact">
 
-    <Button
-        android:id="@+id/contactSubmitButton"
-        android:layout_width="320dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="45dp"
-        android:background="@drawable/btn_circle"
-        android:backgroundTint="#CC6B49"
-        android:fontFamily="@font/roboto"
-        android:text="Submit"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:cornerRadius="70dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editMessageInput" />
-
-    <EditText
-        android:id="@+id/editMessageInput"
-        android:layout_width="320dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="45dp"
-        android:background="@drawable/custom_input"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:hint="Message"
-        android:inputType="textPersonName"
-        android:paddingLeft="8dp"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editMessageUsername" />
-
-    <EditText
-        android:id="@+id/editMessageUsername"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="45dp"
-        android:background="@drawable/custom_input"
-        android:drawablePadding="12dp"
-        android:ems="10"
-        android:fontFamily="@font/roboto"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        android:paddingLeft="8dp"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="100dp"
-        android:fontFamily="@font/oswald"
-        android:text="Send us a message!"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="56dp"
+        android:fontFamily="@font/roboto"
+        android:text="Have Some Problems?"
+        android:textAlignment="center"
         android:textColor="#6f5542"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
     <ImageView
         android:id="@+id/backHome"
@@ -83,4 +30,78 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="144dp"
+        android:fontFamily="@font/oswald"
+        android:text="Email"
+        android:textAlignment="center"
+        android:textColor="#6F5642"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="111dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="144dp"
+        android:tint="#e9e0d4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/btn_circle" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="111dp"
+        android:layout_height="115dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="144dp"
+        android:translationZ="90dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/ic_email_foreground" />
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="55dp"
+        android:fontFamily="@font/roboto"
+        android:text="mushroomcoding@gmail.com"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="139dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="139dp"
+        android:fontFamily="@font/oswald"
+        android:text="Contact Us"
+        android:textColor="#6f5642"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
