Updated on the to-do list + other layouts.

--- a/app/src/main/res/layout/to_do_list_recycler.xml
+++ b/app/src/main/res/layout/to_do_list_recycler.xml
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/taskStatusButton"
             android:layout_width="79dp"
             android:layout_height="88dp"
             android:layout_marginStart="260dp"
