--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -31,6 +31,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Title"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="normal|bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="DescriptionDetail"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,6 +66,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Start Time"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -80,6 +83,7 @@
         android:fontFamily="@font/roboto"
         android:padding="10dp"
         android:text="Deadline"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
