--- a/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
+++ b/app/src/main/res/layout/activity_to_dolist_edit_task_details.xml
@@ -15,6 +15,7 @@
         android:drawableEnd="@drawable/ic_trash"
         android:drawablePadding="5dp"
         android:fontFamily="@font/roboto"
+        android:padding="5dp"
         android:text="DELETE TASK"
         android:textColor="#cc6b49"
         android:textSize="16sp"
@@ -69,7 +70,7 @@
         android:layout_width="320dp"
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:drawableEnd="@drawable/ic_time"
@@ -79,6 +80,7 @@
         android:hint="Start Time"
         android:inputType="datetime"
         android:padding="10dp"
+        android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +91,7 @@
         android:layout_width="320dp"
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:drawableEnd="@drawable/ic_deadline"
@@ -99,6 +101,7 @@
         android:hint="Deadline"
         android:inputType="datetime"
         android:padding="10dp"
+        android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +112,7 @@
         android:layout_width="320dp"
         android:layout_height="53dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -117,6 +120,7 @@
         android:hint="Title"
         android:inputType="textPersonName"
         android:padding="10dp"
+        android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +133,7 @@
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="44dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -137,9 +141,60 @@
         android:hint="Description"
         android:inputType="textPersonName"
         android:padding="10dp"
+        android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCurrentTaskTitle" />
+
+    <TextView
+        android:id="@+id/textView31"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:fontFamily="@font/roboto"
+        android:text="Title"
+        android:textColor="#6f5643"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskTitle"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:fontFamily="@font/roboto"
+        android:text="Description"
+        android:textColor="#6f5643"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDescription"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:text="Start Time"
+        android:textColor="#6f5643"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskStartTime"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView34"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:text="Deadline"
+        android:textColor="#6f5643"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editCurrentTaskDeadline"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
