--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -8,7 +8,7 @@
     tools:context=".CalendarEventEditActivity">
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/gobackButton"
         android:layout_width="75dp"
         android:layout_height="75dp"
         app:srcCompat="@drawable/ic_back" />
@@ -16,36 +16,42 @@
     <TextView
         android:id="@+id/textView20"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:fontFamily="@font/oswald"
         android:text="Add New Event"
+        android:textAlignment="center"
         android:textColor="#6F5643"
         android:textSize="34sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/eventNameET"
-        android:layout_width="300dp"
-        android:layout_height="53dp"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="40dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:fontFamily="@font/roboto"
         android:hint="Name of Event"
         android:inputType="text"
-        android:padding="10dp"
+        android:paddingLeft="20dp"
+        android:textAlignment="center"
         android:textSize="20sp" />
 
     <TextView
         android:id="@+id/eventDateTV"
         android:layout_width="320dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
-        android:text="Date"
+        android:padding="10dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp" />
@@ -54,10 +60,13 @@
         android:id="@+id/calEventTimeET"
         android:layout_width="320dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/custom_input"
         android:fontFamily="@font/roboto"
+        android:padding="10dp"
         android:text="Time"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -65,17 +74,20 @@
 
     <Button
         android:id="@+id/calAddEventBtn"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
+        android:layout_width="182dp"
+        android:layout_height="58dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/btn_bg"
         android:drawableEnd="@drawable/ic_addbutton"
         android:drawablePadding="5dp"
         android:fontFamily="@font/roboto"
         android:onClick="saveEventAction"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="Save"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold" />
