--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -148,6 +148,8 @@
 
 
 
+
+
     ]]>
 
     <Button
@@ -155,6 +157,8 @@
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:layout_gravity="center"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:background="@null"
         android:drawableEnd="@drawable/ic_pencil"
         android:drawablePadding="5dp"
