--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -37,7 +37,7 @@
         android:fontFamily="@font/roboto"
         android:hint="Name of Event"
         android:inputType="text"
-        android:paddingLeft="20dp"
+        android:paddingLeft="10dp"
         android:textAlignment="viewStart"
         android:textSize="20sp" />
 
@@ -85,7 +85,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/custom_input"
-        android:focusable="false"
+        android:focusable="auto"
+        android:focusableInTouchMode="false"
         android:fontFamily="@font/roboto"
         android:hint="3:00PM"
         android:padding="10dp"
