--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="284dp"
-        android:layout_height="117dp"
-        android:layout_marginStart="87dp"
+        android:layout_width="387dp"
+        android:layout_height="113dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="89dp"
         android:translationZ="90dp"
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView25"
-        app:srcCompat="@drawable/dont_slcak" />
+        app:srcCompat="@drawable/dont_slcak8" />
 
     <TextView
         android:id="@+id/textView25"
@@ -53,10 +53,11 @@
         android:layout_width="370dp"
         android:layout_height="450dp"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="3dp"
         android:background="@drawable/textview_border"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
@@ -65,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="156dp"
         android:text="Welcome to Don't Slack!"
         android:textColor="#6f5642"
