--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -421,18 +421,18 @@
 
     </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="284dp"
-            android:layout_height="117dp"
-            android:layout_marginStart="87dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="89dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.475"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/dont_slcak" />
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="500dp"
+        android:layout_height="117dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="89dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dont_slcak8" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
