--- a/app/src/main/res/layout/calendar_event_cell.xml
+++ b/app/src/main/res/layout/calendar_event_cell.xml
@@ -1,50 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="vertical">
+    android:layout_height="60dp">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/eventCellTV"
-                android:layout_width="302dp"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="22dp"
-                android:fontFamily="@font/roboto"
-                android:gravity="center"
-                android:text="Event"
-                android:textAlignment="viewStart"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_gravity="center"
-                android:layout_marginLeft="340dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="25dp"
-                android:tint="#6f5642"
-                app:srcCompat="@drawable/ic_trash" />
-
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginStart="20dp"
+        android:id="@+id/eventCellTV"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:text="Event"/>
 
 </LinearLayout>
