--- a/app/src/main/res/layout/calendar_event_edit.xml
+++ b/app/src/main/res/layout/calendar_event_edit.xml
@@ -88,7 +88,7 @@
         android:focusable="auto"
         android:focusableInTouchMode="false"
         android:fontFamily="@font/roboto"
-        android:hint="3:00PM"
+        android:hint="Select Time"
         android:padding="10dp"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
