--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -23,7 +23,9 @@
 
         <Button
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:background="@null"
             android:drawableLeft="@drawable/ic_arrowleft"
@@ -49,7 +51,9 @@
 
         <Button
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="50dp"
             android:layout_weight="1"
             android:background="@null"
             android:drawableRight="@drawable/ic_arrowright"
