--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -264,13 +264,13 @@
         android:layout_width="410dp"
         android:layout_height="103dp"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="14dp"
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView8">
 
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
@@ -423,13 +423,13 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="500dp"
+        android:layout_width="430dp"
         android:layout_height="117dp"
         android:layout_marginStart="75dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="89dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="75dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dont_slcak8" />
